# BitFun

./: .gitignore  AGENTS-CN.md  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING_CN.md  Cargo.toml  FILE_TREE_REFACTOR_BLUEPRINT.md  FILE_TREE_REFACTOR_PROGRESS.md  README.md  README.zh-CN.md  TODO.md  package-lock.json  package.json
.github/workflows/: ci.yml  desktop-package.yml  nightly.yml  release-please.yml
BitFun-Installer/: package-lock.json  package.json
BitFun-Installer/scripts/: build-installer.cjs
BitFun-Installer/src-tauri/: Cargo.toml  tauri.conf.json
docs/: managed-runtime-delivery-plan.md
docs/architecture/: core-decomposition.md
docs/features/: session-runtime-usage-report-design.md
scripts/: check-core-boundaries.mjs  desktop-tauri-build.mjs  dev.cjs  ensure-openssl-windows.mjs  prepare-codgrep-resource.mjs  run-e2e-way2-sequential.cjs
src/apps/desktop/: Cargo.toml  tauri.conf.json
src/apps/desktop/capabilities/: default.json
src/apps/desktop/src/: lib.rs  logging.rs  macos_menubar.rs  theme.rs  tray.rs
src/apps/desktop/src/api/: acp_client_api.rs  agentic_api.rs  ai_rules_api.rs  app_state.rs  browser_control_api.rs  commands.rs  config_api.rs  context_upload_api.rs  cowork_api.rs  dto.rs  git_agent_api.rs  git_api.rs  i18n_api.rs  image_analysis_api.rs  lsp_api.rs  lsp_workspace_api.rs  mcp_api.rs  miniapp_api.rs  mod.rs  plugin_api.rs  project_context_api.rs  prompt_template_api.rs  remote_connect_api.rs  search_api.rs  skill_api.rs  snapshot_service.rs  startchat_agent_api.rs  storage_commands.rs  subagent_api.rs  system_api.rs  terminal_api.rs  token_usage_api.rs  tool_api.rs
src/apps/desktop/src/computer_use/: desktop_host.rs  macos_ax_ui.rs  screen_ocr.rs
src/apps/relay-server/: Cargo.toml  Dockerfile  README.md  deploy.sh  docker-compose.yml  restart.sh  start.sh  stop.sh  test_incremental_upload.py
src/apps/relay-server/deploy/: Cargo.toml  Dockerfile  docker-compose.yml
src/apps/relay-server/deploy/src/: config.rs
src/apps/relay-server/deploy/src/relay/: room.rs
src/apps/relay-server/deploy/src/routes/: api.rs  websocket.rs
src/apps/relay-server/src/: lib.rs  main.rs
src/apps/relay-server/src/relay/: room.rs
src/apps/relay-server/src/routes/: api.rs  websocket.rs
src/crates/product-domains/: AGENTS-CN.md  AGENTS.md  Cargo.toml
src/crates/product-domains/src/function_agents/: ports.rs
src/crates/product-domains/src/function_agents/git_func_agent/: utils.rs
src/crates/product-domains/src/function_agents/startchat_func_agent/: utils.rs
src/crates/product-domains/src/miniapp/: exporter.rs  host_routing.rs  lifecycle.rs  mod.rs  ports.rs  runtime.rs  storage.rs  worker.rs
src/crates/product-domains/tests/: function_agent_contracts.rs  miniapp_contracts.rs
src/crates/services-integrations/: Cargo.toml
src/crates/services-integrations/src/: lib.rs
src/crates/services-integrations/src/announcement/: mod.rs
src/crates/services-integrations/src/mcp/: mod.rs
src/crates/services-integrations/src/mcp/adapter/: mod.rs  tool.rs
src/crates/services-integrations/src/mcp/config/: mod.rs
src/crates/services-integrations/src/mcp/protocol/: mod.rs
src/crates/services-integrations/src/mcp/server/: mod.rs
src/crates/services-integrations/src/remote_ssh/: mod.rs
src/crates/services-integrations/tests/: announcement_contracts.rs  mcp_contracts.rs  remote_ssh_contracts.rs
webdriver_runtime/tauri-plugin-webdriver/: .mlc.toml  Cargo.toml  LICENSE  README.md  deny.toml
webdriver_runtime/tauri-plugin-webdriver/.github/: FUNDING.yml  dependabot.yml  release.yml
webdriver_runtime/tauri-plugin-webdriver/.github/workflows/: checks.yml  e2e.yml  publish.yml
webdriver_runtime/tauri-plugin-webdriver/android/: build.gradle.kts
webdriver_runtime/tauri-plugin-webdriver/android/src/androidTest/java/: ExampleInstrumentedTest.kt
webdriver_runtime/tauri-plugin-webdriver/android/src/main/java/: WebDriverPlugin.kt
webdriver_runtime/tauri-plugin-webdriver/android/src/test/java/: ExampleUnitTest.kt
webdriver_runtime/tauri-plugin-webdriver/examples/tauri-app/: package.json  pnpm-lock.yaml
webdriver_runtime/tauri-plugin-webdriver/examples/tauri-app/e2e/: tsconfig.json  wdio.conf.ts
webdriver_runtime/tauri-plugin-webdriver/examples/tauri-app/e2e/helpers/: app-launcher.ts  test-utils.ts
webdriver_runtime/tauri-plugin-webdriver/examples/tauri-app/e2e/specs/: actions.spec.ts  alerts.spec.ts  cookies.spec.ts  elements.spec.ts  frames.spec.ts  navigation.spec.ts  print.spec.ts  screenshots.spec.ts  scripts.spec.ts  session.spec.ts  shadow-dom.spec.ts  window.spec.ts
webdriver_runtime/tauri-plugin-webdriver/examples/tauri-app/src/: App.svelte
webdriver_runtime/tauri-plugin-webdriver/examples/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
webdriver_runtime/tauri-plugin-webdriver/examples/tauri-app/src-tauri/src/: lib.rs
webdriver_runtime/tauri-plugin-webdriver/examples/tauri-app/src/lib/: AlertTest.svelte  FormTest.svelte  FrameTest.svelte  Greet.svelte  ScrollTest.svelte  ShadowTest.svelte
webdriver_runtime/tauri-plugin-webdriver/ios/: Package.swift  README.md
webdriver_runtime/tauri-plugin-webdriver/ios/Sources/: WebDriverPlugin.swift
webdriver_runtime/tauri-plugin-webdriver/src/: desktop.rs  lib.rs  mobile.rs
webdriver_runtime/tauri-plugin-webdriver/src/platform/: alert_state.rs  android.rs  executor.rs  ios.rs  linux.rs  macos.rs  mod.rs  windows.rs
webdriver_runtime/tauri-plugin-webdriver/src/server/: mod.rs  response.rs  router.rs
webdriver_runtime/tauri-plugin-webdriver/src/server/handlers/: actions.rs  alert.rs  cookie.rs  document.rs  element.rs  frame.rs  mod.rs  navigation.rs  print.rs  screenshot.rs  script.rs  session.rs  shadow.rs  timeouts.rs  window.rs
webdriver_runtime/tauri-plugin-webdriver/src/webdriver/: element.rs  locator.rs  mod.rs  session.rs
webdriver_runtime/tauri-webdriver/: Cargo.toml  README.md  deny.toml
webdriver_runtime/tauri-webdriver/.github/workflows/: checks.yml  publish.yml
webdriver_runtime/tauri-webdriver/src/: cli.rs  main.rs  server.rs
(+932 files in other folders)
