[package]
name = "tauri-plugin-webdriver"
version = "0.2.1"
authors = ["You"]
description = "W3C WebDriver implementation for Tauri applications"
license = "MIT"
repository = "https://github.com/Choochmeque/tauri-plugin-webdriver"
keywords = ["tauri", "webdriver", "selenium", "testing", "automation"]
categories = ["development-tools::testing", "gui"]
edition = "2021"
rust-version = "1.89"
exclude = ["/examples"]
links = "tauri-plugin-webdriver"

[dependencies]
tauri = { version = "2.10.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "net", "time"] }
axum = "0.8"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
tracing = "0.1"
async-trait = "0.1"
tempfile = "3"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSData", "NSError", "NSArray", "NSDictionary"] }
objc2-app-kit = { version = "0.3", features = ["NSImage", "NSImageRep", "NSBitmapImageRep"] }
objc2-web-kit = { version = "0.3", features = ["WKWebView", "WKWebsiteDataStore", "WKHTTPCookieStore", "WKSnapshotConfiguration", "WKUIDelegate", "WKPDFConfiguration", "WKFrameInfo", "WKScriptMessageHandler", "WKScriptMessage", "WKUserContentController", "block2", "objc2-app-kit"] }
block2 = "0.6"

[target.'cfg(target_os = "windows")'.dependencies]
webview2-com = "0.38"
windows = { version = "0.61", features = ["Win32_System_Com", "Win32_System_Com_StructuredStorage", "Win32_System_WinRT"] }
windows-core = "0.61"

[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = "2.0"
javascriptcore-rs = "1.1"
glib = "0.22"
gtk = "0.18"
cairo-rs = { version = "0.18", features = ["png"] }

[build-dependencies]
tauri-plugin = { version = "2.5.3", features = ["build"] }
