[package]
name = "tauri-webdriver"
version = "0.1.1"
authors = ["You"]
categories = ["gui", "web-programming", "development-tools::testing"]
license = "MIT"
repository = "https://github.com/Choochmeque/tauri-webdriver"
description = "Cross-platform WebDriver server for Tauri applications"
readme = "README.md"
edition = "2021"
rust-version = "1.89"

[dependencies]
anyhow = "1"
futures = "0.3"
futures-util = "0.3"
http-body-util = "0.1"
hyper = { version = "1", features = ["client", "http1", "server"] }
hyper-util = { version = "0.1", features = [
  "client",
  "client-legacy",
  "http1",
  "server",
  "tokio",
] }
pico-args = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros"] }
which = "8"

[target."cfg(unix)".dependencies]
signal-hook = "0.4"
signal-hook-tokio = { version = "0.4", features = ["futures-v0_3"] }

[target."cfg(windows)".dependencies]
win32job = "2"
tokio = { version = "1", features = ["signal"] }
