[package]
name = "bitfun-desktop"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "BitFun Desktop Application (Tauri)"

[features]
webdriver-e2e = ["dep:tauri-plugin-webdriver-automation"]
webdriver-e2e-way2 = ["dep:tauri-plugin-webdriver"]

[lib]
name = "bitfun_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "bitfun-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { workspace = true }
serde_json = { workspace = true }

[dependencies]
# Internal crates
bitfun-core = { path = "../../crates/core" }
bitfun-transport = { path = "../../crates/transport", features = ["tauri-adapter"] }

# Tauri
tauri = { workspace = true }
tauri-plugin-opener = { workspace = true }
tauri-plugin-dialog = { workspace = true }
tauri-plugin-fs = { workspace = true }
tauri-plugin-log = { workspace = true }
tauri-plugin-webdriver-automation = { version = "0.1.3", optional = true }
tauri-plugin-webdriver = { path = "../../../webdriver_runtime/tauri-plugin-webdriver", optional = true }

# Inherited from workspace
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
dirs = { workspace = true }
similar = { workspace = true }
ignore = { workspace = true }
urlencoding = { workspace = true }
reqwest = { workspace = true }

[target.'cfg(windows)'.dependencies]
win32job = { workspace = true }
