[package]
name = "bitfun-relay-server"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "BitFun Relay Server - WebSocket relay for Remote Connect"

[[bin]]
name = "bitfun-relay-server"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { workspace = true }
tower-http = { workspace = true, features = ["cors", "fs"] }

# Async runtime
tokio = { workspace = true, features = ["full"] }
futures-util = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
